--- a/generator/assets/css/_variables.scss
+++ b/generator/assets/css/_variables.scss
@@ -2,7 +2,7 @@
 
 $white: #FFFFFF;
 $dark: #222222;
-$blue: #26ADE4;
+$blue: #00AEEF;
 
 $primary-color: $dark !default;
 $secondary-color: $blue !default;
