--- a/generator/layouts/archive.html.erb
+++ b/generator/layouts/archive.html.erb
@@ -6,6 +6,7 @@
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
                 <h1>Geek Night Chennai</h1>
+                <h3>Flashback</h3>
             </div>
         </div>
 
