--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -40,7 +40,7 @@
             <div class="large-5 columns">
                 <p>register to</p>
                 <h4><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" id="participate" target="_blank" rel="nofollow">Participate</a></h4>
-                <p><small>&bull; free participation &amp; dinner</small></p>
+                <p><small>&bull; this is an open forum, no premium attached</small></p>
             </div>
             <div class="large-2 columns">
                 <hr class="show-for-small" />
@@ -49,7 +49,7 @@
             <div class="large-5 columns">
                 <p>submit your</p>
                 <h4><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank" rel="nofollow">Talk</a></h4>
-                <p><small>&bull; this is an open forum, any technical talks welcome</small></p>
+                <p><small>&bull; any technical talks are welcome</small></p>
             </div>
         </div>
     </section>
