--- a/generator/layouts/_about_section.html.erb
+++ b/generator/layouts/_about_section.html.erb
@@ -14,7 +14,7 @@
             <blockquote>
                 <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. To know more, pay a visit to the next Geek Night, or get in touch using any of the above social media.</p>
 
-                <p>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</p>
+                <p><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
 
                 <cite>Geek Night Volunteers</cite>
             </blockquote>
