--- a/generator/assets/css/app.sass
+++ b/generator/assets/css/app.sass
@@ -95,13 +95,24 @@ body
   .date h4
     border-top: 1px dashed $main-fg
 
-  .actions h4 a
-    @include single-transition(background-color)
-    @include button-style($alt-fg)
-    @include radius
-    color: $main-bg
-    display: block
-    padding: .25em 0
+  .actions
+    padding-top: 1em
+
+    h4 a
+      @include single-transition(background-color)
+      @include button-style($alt-fg)
+      @include radius
+      color: $main-bg
+      display: block
+      padding: .25em
+      margin-bottom: .25em
+
+      @media only screen and (max-width:#{$small-screen})
+        padding: .5em
+
+    h6.delimiter
+      color: lighten($main-fg, 50%)
+      line-height: 2.5
 
 //
 // AGENDA SECTION
