--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -38,18 +38,16 @@
 
         <div class="row actions">
             <div class="large-5 columns">
-                <p>register to</p>
                 <h4><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" id="participate" target="_blank" rel="nofollow">Participate</a></h4>
-                <p><small>&bull; this is an open forum, no premium attached</small></p>
+                <p>to learn exciting new stuff</p>
             </div>
             <div class="large-2 columns">
                 <hr class="show-for-small" />
-                <h5 class="hide-for-small"><br />&laquo; or &raquo;</h5>
+                <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
             </div>
             <div class="large-5 columns">
-                <p>submit your</p>
                 <h4><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank" rel="nofollow">Talk</a></h4>
-                <p><small>&bull; any technical talks are welcome</small></p>
+                <p>to share exciting new stuff</p>
             </div>
         </div>
     </section>
