--- a/generator/layouts/_agenda_section.html.erb
+++ b/generator/layouts/_agenda_section.html.erb
@@ -6,31 +6,31 @@
     <div class="timings">
         <% @item[:agenda].each do |agenda| %>
           <div class="row">
-            <div class="small-4 columns time"><p><%= agenda[:time] %> pm</p></div>
-            <div class="small-8 columns summary <%= "with-image" if agenda[:image] %>"><p>
-                <%= agenda[:title] %>
+            <div class="large-4 columns time"><p><%= agenda[:time] %> pm</p></div>
+            <div class="large-8 columns summary">
+                <p><%= agenda[:title] %></p>
                 <% if agenda[:subtitle] %>
-                    <br /><small><%= agenda[:subtitle] %></small>
+                    <p><small><%= agenda[:subtitle] %></small></p>
                 <% end %>
                 <% if agenda[:image] %>
-                    <img src="img/speaker/<%= agenda[:image] %>" alt="<%= agenda[:speaker] %>" />
+                    <p><img src="img/speaker/<%= agenda[:image] %>" alt="<%= agenda[:speaker] %>" /></p>
                 <% end %>
                 <% if agenda[:speaker] %>
-                    <br /><small class="speaker">By:
+                    <p><small>By:
                     <% if agenda[:profile] %>
                     <a href="<%= agenda[:profile] %>" rel="nofollow" target="_blank"><%= agenda[:speaker] %></a>
                     <% else %>
                         <%= agenda[:speaker] %>
                     <% end %>
-                    </small>
+                    </small></p>
                 <% end %>
                 <% if agenda[:resources] %>
-                    <br /><small class="resources">Resources:
+                    <p><small>Resources:
                     <% agenda[:resources].each_with_index do |resource, i| %>
                         <a href="<%= resource[:url] %>" rel="nofollow" target="_blank"><%= resource[:title] %></a>
                         <%= ' &bull; ' if i != agenda[:resources].length - 1 %>
                     <% end %>
-                    </small>
+                    </small></p>
                 <% end %>
             </p></div>
           </div>
