Added participate/talk link tracking to google analytics

--- a/generator/layouts/_footer_section.html.erb
+++ b/generator/layouts/_footer_section.html.erb
@@ -6,8 +6,9 @@
                 <a rel="nofollow" target="_blank" href="//thoughtworks.com">ThoughtWorks</a><br />
                 Built with
                 <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
-                <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a> &amp;
-                <a rel="nofollow" target="_blank" href="//leafletjs.com">Leaflet</a>
+                <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a>,
+                <a rel="nofollow" target="_blank" href="//leafletjs.com">Leaflet</a> &amp;
+                <a rel="nofollow" target="_blank" href="//nanoc.ws">Nanoc</a>
                 <br />
                 Assets from <a rel="nofollow" target="_blank" href="//openstreetmap.org">OpenStreetMap</a>,
                 <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a> &amp;
