--- a/generator/layouts/_header_section.html.erb
+++ b/generator/layouts/_header_section.html.erb
@@ -10,8 +10,18 @@
                     <li><a href="http://www.thoughtworks.com" target="_blank">ThoughtWorks</a></li>
                 </ul>
                 <ul class="right">
-                    <li><a href="<%= latest[:participate] %>" target="_blank" rel="nofollow">Participate</a></li>
-                    <li><a href="<%= latest[:talk] %>" target="_blank" rel="nofollow">Talk</a></li>
+                    <li>
+                        <a href="<%= latest[:participate] %>" target="_blank" rel="nofollow"
+                           onclick="ga.push(['_trackEvent','Register','Participate','Participate'])">
+                            Participate
+                        </a>
+                    </li>
+                    <li>
+                        <a href="<%= latest[:talk] %>" target="_blank" rel="nofollow"
+                           onclick="ga.push(['_trackEvent','Register','Talk','Talk'])">
+                            Talk
+                        </a>
+                    </li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#agenda">Agenda</a></li>
                     <% if @item == latest %>
