--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -40,7 +40,8 @@
 
         <div class="row actions">
             <div class="large-5 columns">
-                <a href="<%= @item[:participate] %>" id="participate" target="_blank" rel="nofollow">
+                <a href="<%= @item[:participate] %>" id="participate" target="_blank" rel="nofollow"
+                   onclick="ga.push(['_trackEvent','Register','Participate','Participate'])">
                     <h4>Participate</h4>
                 </a>
                 <p>to learn exciting new stuff</p>
@@ -50,7 +51,8 @@
                 <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
             </div>
             <div class="large-5 columns">
-                <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow">
+                <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
+                   onclick="ga.push(['_trackEvent','Register','Talk','Talk'])">
                     <h4>Talk</h4>
                 </a>
                 <p>to share exciting new stuff</p>
