--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -41,7 +41,7 @@
         <div class="row actions">
             <div class="large-5 columns">
                 <a href="<%= @item[:participate] %>" id="participate" target="_blank" rel="nofollow"
-                   onclick="ga.push(['_trackEvent','Register','Participate','Participate'])">
+                   onclick="ga('send', 'event', 'register', 'participate')">
                     <h4>Participate</h4>
                 </a>
                 <p>to learn exciting new stuff</p>
@@ -52,7 +52,7 @@
             </div>
             <div class="large-5 columns">
                 <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
-                   onclick="ga.push(['_trackEvent','Register','Talk','Talk'])">
+                   onclick="ga('send', 'event', 'register', 'talk')">
                     <h4>Talk</h4>
                 </a>
                 <p>to share exciting new stuff</p>
