--- a/generator/layouts/_header_section.html.erb
+++ b/generator/layouts/_header_section.html.erb
@@ -12,13 +12,13 @@
                 <ul class="right">
                     <li>
                         <a href="<%= latest[:participate] %>" target="_blank" rel="nofollow"
-                           onclick="ga('send', 'event', 'register', 'participate')">
+                           onclick="ga('send', 'event', 'participate', 'participate')">
                             Participate
                         </a>
                     </li>
                     <li>
                         <a href="<%= latest[:talk] %>" target="_blank" rel="nofollow"
-                           onclick="ga('send', 'event', 'register', 'talk')">
+                           onclick="ga('send', 'event', 'talk', 'talk')">
                             Talk
                         </a>
                     </li>
