Fix animation issues with a custom build

--- a/generator/assets/css/app.sass
+++ b/generator/assets/css/app.sass
@@ -1,5 +1,5 @@
 @charset "UTF-8"
-@import "normalize", "variables", "foundation/components/global", "foundation/components/type", "foundation/components/grid", "foundation/components/block-grid", "foundation/components/visibility", "foundation/components/top-bar", "foundation/components/buttons", "animate"
+@import "normalize", "animate", "variables", "foundation/components/global", "foundation/components/type", "foundation/components/grid", "foundation/components/block-grid", "foundation/components/visibility", "foundation/components/top-bar", "foundation/components/buttons"
 
 body
   padding-top: $topbar-height
