--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -5,7 +5,7 @@
                 <a href="http://www.thoughtworks.com" target="_blank">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1 class="animated bounceInDown">Geek Night Chennai</h1>
+                <h1 class="animated bounce">Geek Night Chennai</h1>
                 <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
             </div>
         </div>
