--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -5,7 +5,7 @@
                 <a href="http://www.thoughtworks.com" target="_blank">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1 class="animated bounce">Geek Night Chennai</h1>
+                <h1>Geek Night Chennai</h1>
                 <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
             </div>
         </div>
@@ -40,7 +40,7 @@
 
         <div class="row actions">
             <div class="large-5 columns">
-                <a href="<%= @item[:participate] %>" target="_blank" rel="nofollow" class="animated"
+                <a href="<%= @item[:participate] %>" target="_blank" rel="nofollow"
                    onclick="ga('send', 'event', 'participate', 'participate')">
                     <h4>Participate</h4>
                 </a>
@@ -51,7 +51,7 @@
                 <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
             </div>
             <div class="large-5 columns">
-                <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow" class="animated"
+                <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
                    onclick="ga('send', 'event', 'talk', 'talk')">
                     <h4>Talk</h4>
                 </a>
