--- a/generator/layouts/_header_section.html.erb
+++ b/generator/layouts/_header_section.html.erb
@@ -7,7 +7,9 @@
             </ul>
             <section class="top-bar-section">
                 <ul class="left">
-                    <li><a href="http://www.thoughtworks.com" target="_blank">ThoughtWorks</a></li>
+                    <li><a href="http://www.thoughtworks.com" target="_blank"
+                           onclick="ga('send', 'event', 'tw', 'tw')">ThoughtWorks</a>
+                    </li>
                 </ul>
                 <ul class="right">
                     <li>
