--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -2,7 +2,8 @@
     <section id="intro" class="feature">
         <div class="row">
             <div class="large-12 columns">
-                <a href="http://www.thoughtworks.com" target="_blank">
+                <a href="http://www.thoughtworks.com" target="_blank"
+                   onclick="ga('send', 'event', 'tw', 'tw')">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
                 <h1>Geek Night Chennai</h1>
