Disabled participation link

--- a/generator/layouts/_header_section.html.erb
+++ b/generator/layouts/_header_section.html.erb
@@ -13,10 +13,12 @@
                 </ul>
                 <ul class="right">
                     <li>
+                    <% if latest[:participate] %>
                         <a href="<%= latest[:participate] %>" target="_blank" rel="nofollow"
                            onclick="ga('send', 'event', 'participate', 'participate')">
                             Participate
                         </a>
+                    <% end %>
                     </li>
                     <li>
                         <a href="<%= latest[:talk] %>" target="_blank" rel="nofollow"
