--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -41,11 +41,24 @@
 
         <div class="row actions">
             <div class="large-5 columns">
-                <a href="<%= @item[:participate] %>" target="_blank" rel="nofollow"
-                   onclick="ga('send', 'event', 'participate', 'participate')">
-                    <h4>Participate</h4>
-                </a>
-                <p>to learn exciting new stuff</p>
+                <% if item[:participate] %>
+                    <a href="<%= @item[:participate] %>" target="_blank" rel="nofollow"
+                       onclick="ga('send', 'event', 'participate', 'participate')">
+                        <h4>Participate</h4>
+                    </a>
+                    <p>
+                        to learn exciting new stuff <br />
+                        <small>(and to connect with fellow geeks)</small>
+                    </p>
+                <% else %>
+                    <a href="javascript:void(0)">
+                        <h4><strike>Participate</strike></h4>
+                    </a>
+                    <p>
+                        registrations closed <br />
+                        <small>(sorry, but check out next geek night)</small>
+                    </p>
+                <% end %>
             </div>
             <div class="large-2 columns">
                 <hr class="show-for-small" />
@@ -56,7 +69,10 @@
                    onclick="ga('send', 'event', 'talk', 'talk')">
                     <h4>Talk</h4>
                 </a>
-                <p>to share exciting new stuff</p>
+                <p>
+                    to share exciting new stuff <br />
+                    <small>(accepted for this and subsequent geek nights)</small>
+                </p>
             </div>
         </div>
     </section>
