Added skrollr but not yet implemented, will implement for next active page

--- a/generator/layouts/archive.html.erb
+++ b/generator/layouts/archive.html.erb
@@ -28,4 +28,7 @@
     <%= render '_header_section' %>
 
     <%= render '_footer_section' %>
+
+    <script src="js/skrollr.min.js"></script>
+    <script>var s = skrollr.init()</script>
 <% end %>
