--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -92,6 +92,9 @@
     <script>window.targetDate = new Date(<%= start_date.to_i %> * 1000)</script>
     <script src="js/ticker.js"></script>
 
+    <script src="js/skrollr.min.js"></script>
+    <script>var s = skrollr.init()</script>
+
     <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
